--- a/style.css
+++ b/style.css
@@ -1,11 +1,6 @@
+/* stylelint-disable no-descending-specificity */
 /* stylelint-disable indentation */
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,300;1,400&display=swap');
-
-/* * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-} */
 
 html {
   box-sizing: border-box;
@@ -20,17 +15,14 @@ html {
   box-sizing: inherit;
 }
 
-/* html, body {
-    width: 100%;
-    margin: 0px;
-} */
-
 body {
-   /* width: 100%; */
-   /* overflow-x: hidden; */
    font-family: 'Lato', sans-serif;
    margin: 0;
    padding: 0;
+}
+
+.desktop-only {
+    display: none;
 }
 
 header {
@@ -48,25 +40,76 @@ header {
     width: 30px;
 }
 
+.mobile-menu {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    display: none;
+    flex-direction: column;
+    background-color: #272a31;
+    padding-top: 18px;
+    overflow-x: hidden;
+}
+
+.close-btn {
+    padding-right: 36px;
+    align-self: end;
+    border: none;
+    background: none;
+    cursor: pointer;
+    width: 70px;
+}
+
+.menu-list {
+    list-style: none;
+    padding: 24px;
+    width: 100%;
+}
+
+.menu-item-link > hr {
+    color: #6f6c6b;
+}
+
+.menu-item-link > a {
+    text-decoration: none;
+}
+
+.menu-item {
+    padding: 0 16px;
+    color: #fff5e1;
+    font-weight: 700;
+    font-size: 32px;
+}
+
+.homepage {
+    display: flex;
+    flex-direction: column;
+}
+
 .page1-wrap {
     width: 100%;
     background-image: url(images/background1.png);
     background-repeat: no-repeat;
     background-size: cover;
+    display: flex;
+    flex-direction: column;
 }
 
 .page1 {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
+    width: 90%;
     margin: 10px;
+    align-self: center;
+    justify-content: center;
 }
 
 h1 {
     color: #ec5242;
     font-family: 'Lato', sans-serif;
-    font-size: 30px;
-    font-weight: 300px;
+    font-size: 50px;
+    font-weight: bolder;
+    margin-left: 20px;
+    margin-right: 20px;
+    text-align: center;
 }
 
 p {
@@ -89,28 +132,32 @@ p {
 h2 {
     color: #272a31;
     font-family: 'Lato', sans-serif;
-    font-size: 20px;
+    font-size: 25px;
     font-weight: bolder;
+    text-align: center;
 }
 
 .page1-location {
-    font-size: 15px;
+    font-size: 20px;
     color: #272a31;
+    text-align: center;
 }
 
 .page2-wrap {
     width: 100%;
     background-image: url(images/pattern_bg.png);
     background-repeat: repeat;
-    /* background-size: cover; */
     background-color: rgb(39, 42, 50);
+    display: flex;
+    flex-direction: column;
 }
 
 .page2 {
     display: flex;
     flex-direction: column;
-    width: 100%;
-    margin: 10px;
+    width: 90%;
+    align-self: center;
+    justify-content: center;
 }
 
 .page2-title {
@@ -120,31 +167,32 @@ h2 {
 }
 
 hr {
-    color:#ec5242;
+    color: #ec5242;
     width: 50px;
     background-color: #ec5242;
     border: 1px solid #ec5242;
 }
 
+.main-program-container1,
 .main-program-container {
     display: flex;
     flex-direction: column;
 }
 
 .program-wrap {
-    border: 0px;
     background: rgba(255, 255, 255, 0.1);
+    justify-content: space-between;
+    border: 1px solid #6f6c6b;
+    margin-bottom: 10px;
 }
 
 .main-program {
     display: flex;
     flex-direction: row;
-    flex: 100%;
 }
 
 .main-program-icon {
     flex: 20%;
-    /* padding: 10px; */
     width: 10px;
 }
 
@@ -197,6 +245,7 @@ hr {
 
 .speakers-icon {
     flex: 25%;
+    width: 100px;
 }
 
 .speakers-desc {
@@ -223,7 +272,7 @@ hr {
 }
 
 .speaker-break {
-    color:#d3d3d3;
+    color: #d3d3d3;
     width: 50px;
     background-color: #d3d3d3;
     border: 1px solid #d3d3d3;
@@ -268,4 +317,175 @@ footer {
 
 .commons-word {
     margin-left: 50px;
+}
+
+@media (min-width: 768px) {
+    .mobile-only {
+      display: none;
+    }
+
+    .desktop-only {
+        display: flex;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        height: 100px;
+        position: relative;
+    }
+
+    .topHeader {
+        display: flex;
+        height: 20px;
+        background-color: black;
+        flex-direction: row;
+        align-items: center;
+        justify-content: end;
+    }
+
+    .topHeader-button {
+        font-size: 15px;
+        color: #fff;
+        text-decoration: none;
+        justify-content: space-around;
+        padding-right: 5px;
+    }
+
+    .topHeader-list {
+        display: flex;
+        flex-direction: row;
+        text-decoration: none;
+        list-style: none;
+    }
+
+    .topHeader-icon {
+        width: 15px;
+        margin-right: 10px;
+    }
+
+    .navbar {
+        height: 80px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 80%;
+        align-self: center;
+    }
+
+    .nav-logo-text {
+        color: #272a31;
+        text-decoration: none;
+        font-weight: bold;
+        font-size: 23px;
+    }
+
+    .nav-logo {
+        align-self: center;
+    }
+
+    a {
+        text-decoration: none;
+    }
+
+    .nav-menu-list {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        align-items: center;
+        justify-content: end;
+    }
+
+    .nav-menu-item {
+        text-decoration: none;
+        color: #272a31;
+        padding-right: 15px;
+    }
+
+    .campaign {
+        color: #ec5242;
+        border: 4px solid #ec5242;
+        padding: 10px;
+    }
+
+    h1 {
+        font-weight: 1000;
+        align-self: center;
+        justify-content: center;
+        font-size: 80px;
+    }
+
+    .page1-wrap {
+        height: 900px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .page1 {
+        width: 700px;
+        align-self: center;
+        justify-content: center;
+    }
+
+    .page1-words-wrap {
+        align-self: center;
+        justify-content: center;
+    }
+
+    h2 {
+        align-self: center;
+        justify-content: center;
+        font-size: 50px;
+    }
+
+    .page1-location {
+        align-self: center;
+        justify-content: center;
+        font-size: 30px;
+    }
+
+    .main-program-container1 {
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+        align-self: center;
+        justify-content: center;
+    }
+
+    .main-program {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .program-wrap {
+        border: 1px solid #6f6c6b;
+        margin-right: 10px;
+    }
+
+    .main-program-icon {
+        width: 80px;
+    }
+
+    .speakers {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .partner-section {
+        height: 200px;
+    }
+
+    .partner-images {
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .footer {
+        justify-content: space-between;
+        margin-left: 300px;
+        margin-right: 300px;
+    }
 }
