--- a/about.css
+++ b/about.css
@@ -284,7 +284,7 @@ hr {
 }
 
 .partner {
-    color: white;
+    color: #6f6c6b;
     align-self: center;
     justify-content: center;
 }
@@ -301,7 +301,7 @@ hr {
     width: 100px;
 }
 
-footer {
+.footer-icons {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -309,7 +309,7 @@ footer {
 
 .commons-right {
     font-size: 12px;
-    margin-top: 30px;
+    margin-top: 18px;
     margin-right: 50px;
 }
 
@@ -434,6 +434,7 @@ footer {
         align-self: center;
         justify-content: center;
         font-size: 50px;
+        width: 90%;
     }
 
     .page1-email {
@@ -473,8 +474,14 @@ footer {
     }
 
     .footer {
-        justify-content: space-between;
-        margin-left: 300px;
-        margin-right: 300px;
+        display: flex;
+    }
+
+    .footer-icons {
+        justify-content: space-around;
+        display: flex;
+        flex-direction: row;
+        width: 80%;
+        align-self: center;
     }
 }
